# FishAgent

./: .gitignore  environment.yml  pyproject.toml
jsonl/: index.html
src/fishclaw/: __init__.py  __main__.py  agents.py  cli.py  graph.py  harness.py  memory.py  model.py
src/fishclaw/agents/: __init__.py  code_agent.py  common.py  planner_tools.py  prompts.py  review_agent.py  runner.py  search_agent.py  test_agent.py
src/fishclaw/cli/: __init__.py  app.py
src/fishclaw/graph/: __init__.py  builder.py  nodes.py  state_io.py  streaming.py  workflow.py
src/fishclaw/memory/: __init__.py  store.py
src/fishclaw/model/: __init__.py
src/fishclaw/state/: __init__.py  reducers.py  runtime.py
src/fishclaw/tools/: __init__.py  harness.py
tests/: test_agent_summaries.py  test_graph.py  test_harness.py  test_memory.py  test_planner_tools.py  test_search_agent.py
